--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/server.ts"
+    "build": "tsc",
+    "prisma:deploy": "prisma migrate deploy",
+    "prisma:dev": "prisma migrate dev",
+    "prisma:generate": "prisma generate",
+    "dev": "nodemon src/server.ts",
+    "start": "npm run prisma:deploy && node dist/server.js"
   },
   "keywords": [],
   "type": "module",
