--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "build": "tsc",
     "prisma:deploy": "prisma migrate deploy",
     "test": "dotenv -e .env.test npm run prisma:dev && cross-env NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest -- -i",
+    "test:docker": "npm run test:compose -- up",
+    "test:compose": "docker-compose -f docker-compose.test.yml --env-file .env.test",
+    "test:migration:run": "dotenv -e .env.test prisma migrate dev && dotenv -e .env.test prisma generate",
     "prisma:dev": "prisma migrate dev",
+    "prisma:prod": "prisma migrate deploy",
     "prisma:generate": "prisma generate",
     "dev": "nodemon src/server.ts",
-    "start": "npm run prisma:deploy && node dist/server.js"
+    "start": "npm run prisma:deploy && node ./dist/src/server.js"
   },
   "keywords": [],
   "type": "module",
